--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="uName">User Name</string>
     <string name="uPassword">Password</string>
     <string name="title_activity_seat">Seat</string>
+    <string name="leave">Leave request</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
@@ -16,5 +17,9 @@
     <string name="previous">Previous</string>
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="dr_name">Gawsan R</string>
+    <string name="totaljobs">1845</string>
+    <string name="jobs">Jobs</string>
+
 
 </resources>
